--- a/Presentation/VendingMachine.WebApp/App/Main/views/order/order.cshtml
+++ b/Presentation/VendingMachine.WebApp/App/Main/views/order/order.cshtml
@@ -1,4 +1,60 @@
 ﻿<div ng-controller="app.views.order.order as vm" style="width: 60%" class="center-block">
     
-   
+    <div class="row">
+        <div class="col-md-6">
+            <table>
+                <tr>
+                    <th colspan="4">{{vm.assortment.DrinkGroup.ProductTypeName}}</th>
+                </tr>
+                <tr ng-repeat="p in vm.assortment.DrinkGroup.Items">
+                    <td><input ng-model="vm.assortment.DrinkGroup.SelectedId" ng-value="p.Id" type="radio"></td>
+                    <td>{{p.Name}}</td>
+                    <td>{{p.Price}}</td>
+                    <td>руб.</td>
+                </tr>
+            </table>
+        </div>
+        <div class="col-md-6">
+            <table>
+                <tr>
+                    <th colspan="4">{{vm.assortment.FoodGroup.ProductTypeName}}</th>
+                </tr>
+                <tr ng-repeat="p in vm.assortment.FoodGroup.Items">
+                    <td><input ng-model="vm.assortment.FoodGroup.SelectedId" ng-value="p.Id" type="radio"></td>
+                    <td>{{p.Name}}</td>
+                    <td>{{p.Price}}</td>
+                    <td>руб.</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <table>
+                <tr>
+                    <th colspan="4">{{vm.assortment.DrinkAdditionGroup.ProductTypeName}}</th>
+                </tr>
+                <tr ng-repeat="p in vm.assortment.DrinkAdditionGroup.Items">
+                    <td><input ng-model="vm.assortment.DrinkAdditionGroup.SelectedId" ng-value="p.Id" type="radio"></td>
+                    <td>{{p.Name}}</td>
+                    <td>{{p.Price}}</td>
+                    <td>руб.</td>
+                </tr>
+            </table>
+            
+        </div>
+        <div class="col-md-6">
+            <table>
+                <tr>
+                    <th colspan="4">{{vm.assortment.FoodAdditionGroup.ProductTypeName}}</th>
+                </tr>
+                <tr ng-repeat="p in vm.assortment.FoodAdditionGroup.Items">
+                    <td><input ng-model="vm.assortment.FoodAdditionGroup.SelectedId" ng-value="p.Id" type="radio"></td>
+                    <td>{{p.Name}}</td>
+                    <td>{{p.Price}}</td>
+                    <td>руб.</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
