--- a/Presentation/VendingMachine.WebApp/App/Main/views/order/order.cshtml
+++ b/Presentation/VendingMachine.WebApp/App/Main/views/order/order.cshtml
@@ -1,4 +1,5 @@
-﻿<div ng-controller="app.views.order.order as vm" style="width: 60%" class="center-block">
+﻿@using VendingMachine.WebApp.Resources
+<div ng-controller="app.views.order.order as vm" style="width: 60%" class="center-block">
     
     <div class="row">
         <div class="col-md-6">
@@ -10,7 +11,7 @@
                     <td><input ng-model="vm.assortment.DrinkGroup.SelectedId" ng-value="p.Id" type="radio"></td>
                     <td>{{p.Name}}</td>
                     <td>{{p.Price}}</td>
-                    <td>руб.</td>
+                    <td>@Resource.Label_RUR</td>
                 </tr>
             </table>
         </div>
@@ -23,7 +24,7 @@
                     <td><input ng-model="vm.assortment.FoodGroup.SelectedId" ng-value="p.Id" type="radio"></td>
                     <td>{{p.Name}}</td>
                     <td>{{p.Price}}</td>
-                    <td>руб.</td>
+                    <td>@Resource.Label_RUR</td>
                 </tr>
             </table>
         </div>
@@ -35,10 +36,15 @@
                     <th colspan="4">{{vm.assortment.DrinkAdditionGroup.ProductTypeName}}</th>
                 </tr>
                 <tr ng-repeat="p in vm.assortment.DrinkAdditionGroup.Items">
-                    <td><input ng-model="vm.assortment.DrinkAdditionGroup.SelectedId" ng-value="p.Id" type="radio"></td>
-                    <td>{{p.Name}}</td>
+                    <td><input ng-model="p.Checked" type="checkbox"></td>
+                    <td>
+                        <select ng-show="vm.assortment.SugarCount > 0 && p.Id == vm.assortment.SugarId" required ng-model="vm.assortment.SugarCount">
+                            <option ng-repeat="option in vm.assortment.SugarCounts" value="{{option}}">{{option}}</option>
+                        </select>
+                        {{p.Name}}
+                    </td>
                     <td>{{p.Price}}</td>
-                    <td>руб.</td>
+                    <td>@Resource.Label_RUR</td>
                 </tr>
             </table>
             
@@ -49,12 +55,43 @@
                     <th colspan="4">{{vm.assortment.FoodAdditionGroup.ProductTypeName}}</th>
                 </tr>
                 <tr ng-repeat="p in vm.assortment.FoodAdditionGroup.Items">
-                    <td><input ng-model="vm.assortment.FoodAdditionGroup.SelectedId" ng-value="p.Id" type="radio"></td>
+                    <td><input ng-model="p.Checked" type="checkbox"></td>
                     <td>{{p.Name}}</td>
                     <td>{{p.Price}}</td>
-                    <td>руб.</td>
+                    <td>@Resource.Label_RUR</td>
                 </tr>
             </table>
         </div>
     </div>
+    <div>
+        <div class="col-md-12">
+            <table>
+                <tr>
+                    <td><input ng-model="vm.assortment.Composition.Selected" type="checkbox"></td>
+                    <td>{{vm.assortment.Composition.Note}}</td>
+                    <td>{{vm.assortment.Composition.Price}}</td>
+                    <td>@Resource.Label_RUR</td>
+                </tr>
+            </table>
+        </div>
+   </div>
+    <div>
+        <div class="col-md-12">
+            <button type="button" ng-click="vm.purchase()" class="btn btn-primary">
+                @Resource.Action_Purchase
+            </button>
+
+            <button type="button" ng-click="vm.cancel()" class="btn btn-info">
+                @Resource.Action_Cancel
+            </button>
+        </div>
+    </div>
+    <div>
+        <div class="col-md-12">
+            <div>@Resource.Label_Summary: <span>{{vm.assortment.Summary}}</span></div>
+        </div>
+    </div>
+    
+    
+   
 </div>
