--- a/Presentation/VendingMachine.WebApp/App/Main/views/layout/layout.cshtml
+++ b/Presentation/VendingMachine.WebApp/App/Main/views/layout/layout.cshtml
@@ -36,11 +36,11 @@
             min-height: 100%;
             height: auto !important;
             height: 100%;
-            margin: 0 0 -80px 0; /* отрицательный нижний отступ на высоту футера */
+            margin: 0 0 -170px 0; /* отрицательный нижний отступ на высоту футера */
             padding: 0;
         }
         .footer-push, .footer {
-            height: 80px;
+            height: 170px;
             margin: 0;
             padding-top: 20px;
         }
@@ -70,7 +70,16 @@
         <div class="footer-push"></div>
     </div>
     <div class="footer">
-       
+       <div>
+           <ul>
+               <li>Латте – это эспрессо + молоко</li>
+               <li>Капучино – эспрессо + молоко + молочная пенка</li>
+               <li>Молоко можно добавлять к следующим напиткам: эспрессо, латте, чай черный, чай зеленый</li>
+               <li>Сахар можно добавлять ко всем напиткам. Количество порций сахара указывается пользователем (от 1 до 5)</li>
+               <li>Ветчину, сыр можно добавлять к хлебу и булочке (получается бутерброд)</li>
+               <li>Комплекс – это набор из напитка и еды по фиксированной цене. При этом можно выбрать любой элемент из категории «Напиток» + один элемент из «Добавки к напиткам», аналогично с едой: 1 элемент из категории «Еда» + 1 элемент из категории «Добавки к еде»</li>
+           </ul>
+       </div>
     </div>
    
 </body>
