--- a/Presentation/VendingMachine.WebApp/App/Main/views/layout/layout.cshtml
+++ b/Presentation/VendingMachine.WebApp/App/Main/views/layout/layout.cshtml
@@ -36,11 +36,11 @@
             min-height: 100%;
             height: auto !important;
             height: 100%;
-            margin: 0 0 -170px 0; /* отрицательный нижний отступ на высоту футера */
+            margin: 0 0 -180px 0; /* отрицательный нижний отступ на высоту футера */
             padding: 0;
         }
         .footer-push, .footer {
-            height: 170px;
+            height: 180px;
             margin: 0;
             padding-top: 20px;
         }
@@ -48,6 +48,7 @@
         .footer {
             background-color: #e7e7e7;
             vertical-align:middle;
+            
         }
         
     </style>
@@ -70,7 +71,7 @@
         <div class="footer-push"></div>
     </div>
     <div class="footer">
-       <div>
+       <div style="width: 70%; margin-left: 20px; margin-right: 20px">
            <ul>
                <li>Латте – это эспрессо + молоко</li>
                <li>Капучино – эспрессо + молоко + молочная пенка</li>
